--- a/modulo01/package.json
+++ b/modulo01/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "challenger1": "nodemon challenger1/index.js"
   },
   "dependencies": {
     "express": "^4.17.1"
